--- a/app/templates/add.tpl.html
+++ b/app/templates/add.tpl.html
@@ -2,7 +2,7 @@
 
 <form name="new-img" ng-submit="addImg(img)">
   <p class="control">
-    <input name="name" type="text" placeholder="Name"
+    <input name="title" type="text" placeholder="Title"
            ng-model="img.title" />
   </p>
   <p class="control">
