--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -2,7 +2,7 @@
 
 <ul class="imgs">
   <li ng-repeat="img in imgs">
-    <a href="#/img/{{ img._id }}">
+    <a href="#/img/{{ img.id }}">
       <div class="card">
         <h3>{{ img.title }}</h3>
         <img ng-src="{{ img.url }}" />
