--- a/app/templates/detail.tpl.html
+++ b/app/templates/detail.tpl.html
@@ -1,11 +1,9 @@
 
-<div class="card">
- <h1>{{ img.title }}</h1>
- 
+<div class="detailCard">
+<h1>{{ img.title }}</h1>
+
 <button class='imgs' ng-dblclick="addLike(img)"><img ng-src="{{ img.url }}" />
         </button>
        <!--   <span><img src="./images/heart.png"></span>   -->
     <span class="count">{{ img.count }}</span>
 </div>
-
-
