--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -1,12 +1,15 @@
 <h1 class="title">Close Ups</h1>
 
-<ul class="imgs">
-  <li ng-repeat="img in imgs">
-    <a href="#/img/{{ img.id }}">
-      <div class="card">
-        <h3>{{ img.title }}</h3>
-        <img ng-src="{{ img.url }}" />
-      </div>
-    </a>
-  </li>
-</ul>
+<div class="add"><a href="#/add">Upload Close up</a></div>
+<div class="cardContainer">
+  <ul class="imgs">
+    <li ng-repeat="img in imgs">
+      <a href="#/img/{{ img.id }}">
+        <div class="card">
+          <h3>{{ img.title }}</h3>
+          <img ng-src="{{ img.url }}" />
+        </div>
+      </a>
+    </li>
+  </ul>
+</div>
