--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -1,19 +1,16 @@
 <h1 class="title">Close Ups</h1>
- 
- <div class='cardContainer'>
-<ul class="imgs">
-      <li ng-repeat="img in imgs">
-      
-    <p>{{ img.title }}</p>
 
+<ul class="imgs">
+  <li ng-repeat="img in imgs">
     <a href="#/img/{{ img.id }}">
+      <div class='cardContainer'>
 
       <div class="card">
+        <h3>{{ img.title }}</h3>
         <img ng-src="{{ img.url }}" />
+      </div>
  
  	</div>
     </a>
   </li>
 </ul>
-</div>
-
