--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,11 @@
 @import "bulma";
 *{
 	  box-sizing: border-box;
+		// font-family: 'Special Elite', cursive;
+		color: gray;
+		// font-family: 'Poiret One', cursive;
+		font-family: 'Cutive Mono', monospace;
+		// font-family: 'Megrim';
 }
 
 nav{
@@ -26,6 +31,7 @@ h1{
 
 	h3{
 		text-align: center;
+		font-size: 20px;
 	}
 	.card {
 		height: 200px;
@@ -36,6 +42,7 @@ h1{
 		margin-left: 5px;
 	  overflow: auto;
 	  border-radius: 117px;
+		box-shadow: black 9px 10px 35px;
 	}
 	img {
 		max-width: 144%;
