worked on home page need logo

--- a/app/templates/add.tpl.html
+++ b/app/templates/add.tpl.html
@@ -1,13 +1,15 @@
 <h1 class="title">Close Up</h1>
 
-<form name="new-img" ng-submit="addImg(img)">
+<form name="new-img" ng-submit="addImg(img)" class="formPosition">
   <p class="control">
-    <input name="name" type="text" placeholder="Name"
-           ng-model="img.title" />
+    <input name="name" type="text" placeholder=" Name"
+           ng-model="img.title" class="input1"/>
   </p>
   <p class="control">
-    <input name="url" type="text" placeholder="http://closeup.img"
-           ng-model="img.url" />
+    <input name="url" type="text" placeholder=" http://closeup.img"
+           ng-model="img.url" class="input1"/>
   </p>
-  <button class="button is-primary">Add</button>
+  <button class="buttonis-primary">Add</button>
+<div><img src="./images/download.jpeg"  class="Addpage"></div>    
+
 </form>
