add on home html

--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -1,8 +1,8 @@
 
 <h1 class="title">Close Ups</h1>
-<div class="addBar">
-  <a href="#/add">Upload Close up</a>
-</div>
+<div class="addBarContainer"><a href="#/add"><button class="addBar">
+  Upload Close up
+</button></a></div>
 
 <ul class="cardContainer">
   <li ng-repeat="img in imgs">
@@ -18,4 +18,3 @@
 </ul>
 
 </div>
-
