--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import "bulma";
+
 *{
 	  box-sizing: border-box;
 		// font-family: 'Special Elite', cursive;
@@ -9,21 +10,35 @@
 }
 
 nav{
+	margin-top: 5px;
 	text-align: center;
-	font-size: 15px;
-	margin-top: 8px;
+
+	a	{
+		font-size: 15px;
+		margin-top: 8px;
+		color: black;
+	}
 }
 
 h1{
 	height: 110px;
 	text-align: center;
 }
+.addBarContainer {
+	display: flex;
+	justify-content: center;
 
-.addBar {
-	height: 75px;
-	text-align: center;
+	.addBar {
+		font-family: 'Cutive Mono', monospace;
+		width: 429px;
+		height: 40px;
+		margin: 25px auto;
+		background: lightpink;
+		border-radius: 30px;
+		border-color: sienna;
+		color: black;
+	}
 }
-
 .cardContainer {
 	display: flex;
 	flex-wrap: wrap;
@@ -58,32 +73,35 @@ h1{
 
 .container{
   height:700px;
-}
-.formPosition{
-    position: absolute;
-    right: 365px;
-    top: 170px;
-}
-.input1{
-      width: 431px;
-    height: 50px;
-    border-radius: 15px;
-    box-shadow: grey -2px 7px 47px;
-}
-  button{
-    width: 429px;
-    height: 40px;
-    margin-top: 25px;
-    background: lightpink;
-    border-radius: 30px;
-    border-color: sienna;
-  }
 
-.Addpage{
-      height: 320px;
-    margin-top: 30px;
-    border-radius: 179px;
-    border: solid 2px;
-    border-color: black;
-    box-shadow: black 9px 10px 35px;
+	.formPosition{
+	    position: absolute;
+	    right: 365px;
+	    top: 170px;
+	}
+	.input1{
+	    width: 431px;
+	    height: 50px;
+	    border-radius: 15px;
+	    box-shadow: grey -2px 7px 47px;
+	}
+	.buttonis-primary{
+	    width: 429px;
+	    height: 40px;
+	    margin-top: 25px;
+	    background: lightpink;
+	    border-radius: 30px;
+	    border-color: sienna;
+	}
+
+	.Addpage{
+			font-family: 'Cutive Mono', monospace;
+			color: black;
+	    height: 320px;
+	    margin-top: 30px;
+	    border-radius: 179px;
+	    border: solid 2px;
+	    border-color: black;
+	    box-shadow: black 9px 10px 35px;
+	}
 }
