--- a/app/templates/detail.tpl.html
+++ b/app/templates/detail.tpl.html
@@ -1,6 +1,6 @@
 
 <div class="detailCard">
-<h1>{{ img.title }}</h1>
+<h1 class="detailTitle">{{ img.title }}</h1>
 
 <button class='imgs' ng-dblclick="addLike(img)"><img ng-src="{{ img.url }}" />
         </button>
