--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,9 +13,12 @@ nav{
 	margin-top: 5px;
 	text-align: center;
 	a	{
-		font-size: 15px;
-		margin-top: 8px;
+		font-size: 20px;
 		color: black;
+		margin: 10px 20px;
+	}
+	a:hover {
+		color: lightpink;
 	}
 }
 
@@ -72,9 +75,6 @@ h1{
 		top: -6px;
 		border-radius: 130px;
 	}
-	.count{
-		font-size: large;
-	}
 }
 
 .container{
@@ -98,11 +98,11 @@ h1{
 	    background: lightpink;
 	    border-radius: 30px;
 	    border-color: sienna;
+			font-family: 'Cutive Mono', monospace;
+			color: black;
 	}
 
 	.Addpage{
-			font-family: 'Cutive Mono', monospace;
-			color: black;
 	    height: 320px;
 	    margin-top: 30px;
 	    border-radius: 179px;
@@ -116,9 +116,12 @@ h1{
     position: absolute;
     right: 365px;
     top: 170px;
+		input {
+			font-family: 'Cutive Mono', monospace;
+		}
 }
 .input1{
-      width: 431px;
+    width: 431px;
     height: 50px;
     border-radius: 15px;
     box-shadow: grey -2px 7px 47px;
@@ -132,10 +135,52 @@ h1{
     border-color: sienna;
   }
 .Addpage{
-      height: 320px;
+    height: 320px;
     margin-top: 30px;
     border-radius: 179px;
     border: solid 2px;
     border-color: black;
     box-shadow: black 9px 10px 35px;
+}
+
+.detailCard {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
+	.detailTitle {
+		align-self: center;
+		margin: 15px;
+		font-size: 30px;
+	}
+	.detailImg {
+		align-self: center;
+		width: 700px;
+		position: relative;
+		z-index: 1;
+
+		.fa-heart {
+			font-size: 100px;
+			opacity: 0;
+			position: absolute;
+			top: 50%;
+			z-index: 2;
+			left: 50%;
+			margin: -50px;
+			color: lightpink;
+			transition: all 0.5s;
+		}
+
+		.loved .fa-heart {
+			opacity: 1;
+		}
+
+	}
+	.count{
+		font-size: 20px;
+		margin: 15px;
+		align-self: center;
+
+	}
+
 }
