added more css files

--- a/app/templates/add.tpl.html
+++ b/app/templates/add.tpl.html
@@ -1,5 +1,5 @@
 <h1 class="title">Close Up</h1>
-
+<div class="border">
 <form name="new-img" ng-submit="addImg(img)" class="formPosition">
   <p class="control">
     <input name="name" type="text" placeholder=" Name"
@@ -13,3 +13,4 @@
 <div><img src="./images/download.jpeg"  class="Addpage"></div>    
 
 </form>
+</div>
