--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -153,6 +153,12 @@ h1{
 		margin: 15px;
 		font-size: 30px;
 	}
+	button {
+		border-radius: 30px;
+	}
+	img {
+		border-radius: 30px;
+	}
 	.detailImg {
 		align-self: center;
 		width: 700px;
