pulled upstream master

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,11 +9,14 @@
 		// font-family: 'Megrim';
 }
 
+
+
+
 nav{
 	margin-top: 5px;
 	text-align: center;
 	a	{
-		font-size: 15px;
+		font-size: 20px;
 		margin-top: 8px;
 		color: black;
 	}
@@ -76,24 +79,19 @@ h1{
 
 
 .container{
-  height:900px;
+      height: 685px;
 }
 
 	.formPosition{
 	    position: absolute;
 	    right: 365px;
-	    top: 170px;
+	    top: 335px;
 	}
-	.input1{
-	    width: 431px;
-	    height: 50px;
-	    border-radius: 15px;
-	    box-shadow: grey -2px 7px 47px;
-      border-color: #4c2715;
-	}
+	
 
 .buttonis-primary:hover{
-  background:hotpink;
+  background:black;
+  color:#fffaf0;
 }
 
   .buttonis-primary{
@@ -106,48 +104,43 @@ h1{
 	}
 
 
-	.Addpage{
-			font-family: 'Cutive Mono', monospace;
-			color: black;
-	    height: 320px;
-	    margin-top: 30px;
-	    border-radius: 179px;
-	    border: solid 2px;
-	    border-color: black;
-	    box-shadow: black 9px 10px 35px;
-	}
 	
 .border{
-    height: 578px;
-    border-radius: 37px;
-    width: 771px;
-    margin-left: 233px;
+    height: 250px;
+    border-radius: 22px;
+    width: 560px;
+  margin-left: 331px;
     border-style: double;
-    box-shadow: #4c2715 9px 10px 89px;
+    /* box-shadow: #4c2715 9px 10px 89px; */
     background: floralwhite;
+    border: solid 3px;
+    border-color: black;
+    box-shadow: #4c2715 9px 10px 89px;
+    overflow: hidden;
 }
 
 .border:hover{
   box-shadow: black 20px 10px 50px;
-	background: 5px aliceblue;
+	
 }
 
 .formPosition{
-    position: absolute;
-    right: 365px;
-    top: 170px;
-		input {
-			font-family: 'Cutive Mono', monospace;
+      position: absolute;
+    right: 445px;
+       top: 475px;
+    width: 390px;
+    font-family: 'Cutive Mono', monospace;
 		}
-}
+
 .input1{
-    width: 431px;
-    height: 50px;
+    width: 465px;
+    height: 40px;
     border-radius: 15px;
-    box-shadow: grey -2px 7px 47px;
+    border-color: black;
+    color:black;
 }
   .buttonis-primary{
-    width: 429px;
+   width: 108px;
     height: 40px;
     margin-top: 25px;
     background: lightpink;
@@ -155,12 +148,14 @@ h1{
     border-color: sienna;
   }
 .Addpage{
-    height: 320px;
-    margin-top: 30px;
+     height: 155px;
+    margin-top: 6px;
     border-radius: 179px;
     border: solid 2px;
     border-color: black;
     box-shadow: black 9px 10px 35px;
+    margin-left: 502px;
+    margin-bottom: 8px;
 }
 
 .detailCard {
@@ -181,7 +176,7 @@ h1{
 	}
 	.detailImg {
 		align-self: center;
-		width: 700px;
+		width: 600px;
 		position: relative;
 		z-index: 1;
 
@@ -209,3 +204,39 @@ h1{
 
 	}
 }
+.Closeup-Logo{
+          margin-bottom: 30px;
+    border: solid;
+   margin-left: 322px;
+    width: 570px;
+    box-shadow: #4c2715 9px 10px 89px;
+    background: floralwhite;
+    border: solid 3px;
+    border-style: black;
+    border-color: black;
+    margin-top: 81px;
+    border-radius: 15px;
+    margin-top: 0px;
+}
+
+
+.Closeup-Logo1{
+  margin-left: 165px;
+  width: 761px;
+}
+
+.close:hover{
+	 width: 100%;
+    margin-top: -65px;
+
+  }
+
+.close{
+    width: 100%;
+    margin-top:75px;
+    -webkit-transition:margin-top  3s; 
+    transition: margin-top 3s;
+
+   
+}
+
