--- a/app/templates/add.tpl.html
+++ b/app/templates/add.tpl.html
@@ -1,16 +1,40 @@
-<h1 class="title">Close Up</h1>
+<span><img src="./images/download.jpeg"  class="Addpage"></span> 
+<div><img src="./images/closeup1.png"  class="Closeup-Logo"></div> 
 <div class="border">
 <form name="new-img" ng-submit="addImg(img)" class="formPosition">
+<label class="label">Name</label>
   <p class="control">
-    <input name="name" type="text" placeholder=" Name"
-           ng-model="img.title" class="input1"/>
+     <input class="input1"  type="text" placeholder=" Title"
+           ng-model="Info.title" ng-keyup="validateName(Info.title)"/> {{ errors.title }}
   </p>
   <p class="control">
     <input name="url" type="text" placeholder=" http://closeup.img"
-           ng-model="img.url" class="input1"/>
+           ng-model="img.url" class="input1"/>{{ errors.url}}
   </p>
-  <button class="buttonis-primary">Add</button>
-<div><img src="./images/download.jpeg"  class="Addpage"></div>    
+   <button class="buttonis-primary">Add</button>
+  </form>
+  
 
-</form>
+
+  <div class='name'>
+       <ul cliass= "Messages"> 
+           <li ng-repeat= "img in imgs">
+             <div class="styla">Name:<span>{{img.title}}<span></div>
+             <div class="styla">Email<span>{{message.email}}</span></div>
+             </li>
+        </ul>
+   </div>
+  
+
+  <div id="slideshow">
+   <div>
+  
+
+     <img src="./images/closeup2.png " class="close" >
+   </div>
+ 
+   
 </div>
+
+
+
