--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -1,5 +1,5 @@
 
-<h1 class="title">Close Ups</h1>
+<span><img src="./images/closeup1.png"  class="Closeup-Logo1"></span> 
 <div class="addBarContainer"><a href="#/add"><button class="addBar">
   Upload Close up
 </button></a></div>
