--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -1,5 +1,5 @@
 
-<span><img src="./images/closeup1.png"  class="Closeup-Logo1"></span> 
+<span><img src="./images/closeup1.png"  class="Closeup-Logo1"></span>
 <div class="addBarContainer"><a href="#/add"><button class="addBar">
   Upload Close up
 </button></a></div>
@@ -13,6 +13,9 @@
       <div class="card">
         <img ng-src="{{ img.url }}" />
       </div>
+
+      <div class="home-count">Love it {{ img.count }}x{{ times }}! </div>
+
     </a>
   </li>
 </ul>
