--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -50,11 +50,12 @@ h1{
 	h3{
 		text-align: center;
 		font-size: 20px;
+		margin-top: 25px;
 	}
 	.card {
 		height: 200px;
 	  width: 265px;
-	  margin-top: 5px;
+	  margin-top: 10px;
 		margin-bottom: 50px;
 		margin-right: 5px;
 		margin-left: 5px;
@@ -75,6 +76,12 @@ h1{
 		top: -6px;
 		border-radius: 130px;
 	}
+	.home-count {
+		font-size: 15px;
+		margin-top: -30px;
+		margin-bottom: 20px;
+		text-align: center;
+	}
 }
 
 
@@ -82,46 +89,17 @@ h1{
       height: 685px;
 }
 
-	.formPosition{
-	    position: absolute;
-	    right: 365px;
-	    top: 335px;
-	}
-	
-
-.buttonis-primary:hover{
-  background:black;
-  color:#fffaf0;
+.formPosition{
+    position: absolute;
+    right: 365px;
+    top: 335px;
 }
-
-  .buttonis-primary{
-	    width: 429px;
-	    height: 40px;
-	    margin-top: 25px;
-	    background: lightpink;
-	    border-radius: 30px;
-	    border-color: sienna;
-	}
-
-
-
-
-	.Addpage{
-			font-family: 'Cutive Mono', monospace;
-			color: black;
-	    height: 320px;
-	    margin-top: 30px;
-	    border-radius: 179px;
-	    border: solid 2px;
-	    border-color: black;
-	    box-shadow: black 9px 10px 35px;
-	}
 
 .border{
     height: 250px;
     border-radius: 22px;
     width: 560px;
-  margin-left: 331px;
+    margin-left: 331px;
     border-style: double;
     /* box-shadow: #4c2715 9px 10px 89px; */
     background: floralwhite;
@@ -133,13 +111,12 @@ h1{
 
 .border:hover{
   box-shadow: black 20px 10px 50px;
-	
 }
 
 .formPosition{
-      position: absolute;
+    position: absolute;
     right: 445px;
-       top: 475px;
+  	top: 475px;
     width: 390px;
     font-family: 'Cutive Mono', monospace;
 		}
@@ -151,16 +128,22 @@ h1{
     border-color: black;
     color:black;
 }
-  .buttonis-primary{
-   width: 108px;
+
+.buttonis-primary{
+    width: 108px;
     height: 40px;
     margin-top: 25px;
     background: lightpink;
     border-radius: 30px;
     border-color: sienna;
-  }
+}
+.buttonis-primary:hover{
+  background:black;
+  color:#fffaf0;
+}
+
 .Addpage{
-     height: 155px;
+    height: 155px;
     margin-top: 6px;
     border-radius: 179px;
     border: solid 2px;
@@ -209,20 +192,68 @@ h1{
 		.loved .fa-heart {
 			opacity: 1;
 		}
-
 	}
-	.count{
+	.count {
 		font-size: 20px;
 		margin-top: 15px;
 		margin-bottom: 20px;
 		align-self: center;
+	}
+	.commentForm {
+		width: 600px;
+		height: 75px;
+		align-self: center;
+
+		.textarea {
+			width: 600px;
+			border-radius: 15px;
+			border-color: black;
+			color:black;
+		}
+		.is-secondary {
+		    width: 108px;
+		    height: 40px;
+		    margin-top: 5px;
+		    background: lightpink;
+		    border-radius: 30px;
+				border: solid 3px;
+		    border-style: black;
+		    border-color: black;
+		    border-color: sienna;
+		}
+		.is-secondary:hover {
+		  background:black;
+		  color:#fffaf0;
+			border: solid 3px;
+			border-style: black;
+			border-color: black;
+
+		}
+	}
+}
+
+.commentShow {
+	display: flex;
+	justify-content: center;
+	margin-top: 150px;
+
+	.box {
+		width: 600px;
+		margin-top: 10px;
+		border-radius: 30px;
+		border-color: sienna;
+		align-self: center;
+		border: solid 3px;
+		border-style: black;
+		border-color: black;
 
 	}
 }
+
 .Closeup-Logo{
-          margin-bottom: 30px;
+    margin-bottom: 30px;
     border: solid;
-   margin-left: 322px;
+    margin-left: 322px;
     width: 570px;
     box-shadow: #4c2715 9px 10px 89px;
     background: floralwhite;
@@ -233,7 +264,6 @@ h1{
     border-radius: 15px;
     margin-top: 0px;
 }
-
 
 .Closeup-Logo1{
   margin-left: 165px;
@@ -249,9 +279,7 @@ h1{
 .close{
     width: 100%;
     margin-top:75px;
-    -webkit-transition:margin-top  3s; 
+    -webkit-transition:margin-top  3s;
     transition: margin-top 3s;
 
-   
 }
-
