--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -14,7 +14,7 @@
         <img ng-src="{{ img.url }}" />
       </div>
 
-      <div class="home-count">Love it {{ img.count }}x{{ times }}! </div>
+      <div class="home-count">Loved it {{ img.count }}x{{ times }}! </div>
 
     </a>
   </li>
