--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -62,6 +62,10 @@ h1{
 	  overflow: auto;
 	  border-radius: 117px;
 		box-shadow: black 9px 10px 35px;
+		border: solid 3px;
+		border-style: black;
+		border-color: black;
+
 	}
   img:hover{
   background:antiquewhite;
@@ -166,15 +170,22 @@ h1{
 		font-size: 30px;
 	}
 	button {
-		border-radius: 30px;
+		background-color: transparent;
+		border: 0px;
 	}
 	img {
 		border-radius: 30px;
+		border: solid 3px;
+		border-style: black;
+		border-color: black;
+		border-radius: 117px;
 	}
 	.detailImg {
 		align-self: center;
 		width: 600px;
 		position: relative;
+		background-color: transparent;
+		border: 0px solid;
 		z-index: 1;
 
 		.fa-heart {
