added name and title validations

--- a/app/templates/add.tpl.html
+++ b/app/templates/add.tpl.html
@@ -1,29 +1,30 @@
 <span><img src="./images/download.jpeg"  class="Addpage"></span> 
 <div><img src="./images/closeup1.png"  class="Closeup-Logo"></div> 
-<div class="border">
-<form name="new-img" ng-submit="addImg(img)" class="formPosition">
-<label class="label">Name</label>
+<div class="border"  ng-controller="HomeController">
+<form ng-submit="addImg(img)" class="formPosition">
+<label class="label">Title</label>
   <p class="control">
      <input class="input1"  type="text" placeholder=" Title"
-           ng-model="Info.title" ng-keyup="validateName(Info.title)"/> {{ errors.title }}
+           ng-model="img.name" ng-keyup="validateName(img.name)"/> {{ errors.name }}
   </p>
-  <p class="control">
-    <input name="url" type="text" placeholder=" http://closeup.img"
-           ng-model="img.url" class="input1"/>{{ errors.url}}
+   <label class="label">Link</label>
+  <p class="control2">
+    <input class="input2" type="text" placeholder=" http://closeup.img"
+           ng-model="img.email" ng-keyup="validateEmail(img.email)"/> {{ errors.email}}
   </p>
    <button class="buttonis-primary">Add</button>
   </form>
   
 
-
+<!-- 
   <div class='name'>
-       <ul cliass= "Messages"> 
+       <div cliass= "Messages"> 
            <li ng-repeat= "img in imgs">
-             <div class="styla">Name:<span>{{img.title}}<span></div>
-             <div class="styla">Email<span>{{message.email}}</span></div>
+             <div class="styla">Name:<span>{{img.name}}<span></div>
+             <!-- <div class="styla">Email<span>{{message.email}}</span></div>
              </li>
-        </ul>
-   </div>
+        </div>
+   </div> --> -->
   
 
   <div id="slideshow">
