--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -118,7 +118,7 @@ h1{
 	}
 
 .border{
-    height: 250px;
+    height: 300px;
     border-radius: 22px;
     width: 560px;
   margin-left: 331px;
@@ -244,14 +244,34 @@ h1{
 	 width: 100%;
     margin-top: -65px;
 
+
   }
 
 .close{
     width: 100%;
-    margin-top:75px;
+    margin-top:95px;
     -webkit-transition:margin-top  3s; 
     transition: margin-top 3s;
+}
+.input2{
+  width: 465px;
+  height: 40px;
+  border-radius: 15px;
+  border-color: black;
+  color:black;
+}
+.control{
+	color:red;
+	font-size:15px;
+	font-weight: bold;
+	font-family: 'Cutive Mono', monospace;
+}
 
-   
+.control2{
+	color:red;
+	font-size:15px;
+	font-weight: bold;
+
+	  font-family: 'Cutive Mono', monospace;
 }
 
