--- a/app/templates/add.tpl.html
+++ b/app/templates/add.tpl.html
@@ -1,41 +1,30 @@
-<span><img src="./images/download.jpeg"  class="Addpage"></span> 
-<div><img src="./images/closeup1.png"  class="Closeup-Logo"></div> 
-<div class="border"  ng-controller="HomeController">
-<form ng-submit="addImg(img)" class="formPosition">
+<span><img src="./images/download.jpeg"  class="Addpage"></span>
+<div><img src="./images/closeup1.png"  class="Closeup-Logo"></div>
+
+<div class="border"  ng-controller="AddController">
+
+<form name="new-img" ng-submit="addImg(img)" class="formPosition">
+
 <label class="label">Title</label>
   <p class="control">
-     <input class="input1"  type="text" placeholder=" Title"
-           ng-model="img.name" ng-keyup="validateName(img.name)"/> {{ errors.name }}
+     <input name="name" class="input1"  type="text" placeholder=" Title"
+           ng-model="img.title" ng-keyup="validateName(img.name)"/> {{ errors.name }}
   </p>
-   <label class="label">Link</label>
-  <p class="control2">
-    <input class="input2" type="text" placeholder=" http://closeup.img"
-           ng-model="img.email" ng-keyup="validateEmail(img.email)"/> {{ errors.email}}
+
+  <label class="label">Link</label>
+  <p class="control">
+    <input name="url" class="input2" type="text" placeholder=" http://closeup.img"
+           ng-model="img.url" ng-keyup="validateEmail(img.email)"/> {{ errors.email}}
   </p>
-   <button class="buttonis-primary">Add</button>
-  </form>
-  
 
-<!-- 
-  <div class='name'>
-       <div cliass= "Messages"> 
-           <li ng-repeat= "img in imgs">
-             <div class="styla">Name:<span>{{img.name}}<span></div>
-             <!-- <div class="styla">Email<span>{{message.email}}</span></div>
-             </li>
-        </div>
-   </div> --> -->
-  
+  <button class="buttonis-primary">Add</button>
 
-  <div id="slideshow">
-   <div>
-  
+</form>
 
-     <img src="./images/closeup2.png " class="close" >
-   </div>
- 
-   
+
+<div id="slideshow">
+   <img src="./images/closeup2.png " class="close" >
 </div>
 
 
-
+</div>
