added about me page

--- a/app/templates/about.tpl.html
+++ b/app/templates/about.tpl.html
@@ -1,2 +1,10 @@
-<p>Jeremy Springer</p>
-<p>Grace Lee</p>
+<div class="aboutMe">
+  <p class="aboutUs">Close Up is an application that allows a user to upload close up images. <br><br>On the Front End, there are three routes: Home, Add and Detail. The Home page shows a list of all images, the detail page provides detailed view of a specific image that allows the user to add loves and comments, and the add page is where a user can upload an image. On the detail page, a heart button has been placed on the image. The count increases as the user double-clicks on the image. The count is tracked by the Back End and is placed on the Home page view as well as the Detail Page. <br><br> The Back End model was created without a user/authorization using Adonis and deployed to Heroku. Click on the link to redirect to the Back End Heroku Site:
+<a href="https://immense-anchorage-43177.herokuapp.com/">Heroku Back End</a></p>
+
+  <p class="aboutPerson">Jeremy Springer -  The following is a link to his individual Front End GitHub page.
+    <a href="https://github.com/Jeremy5044/close-up-frontend">Jeremy's GitHub</a></p>
+
+  <p class="aboutPerson">Grace Lee - The following is a link to her individual Front End GitHub page.
+    <a href="https://github.com/eunheh/close-up-frontend"/>Grace's GitHub</a></p>
+</div>
