--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -252,7 +252,6 @@ h1{
 		width: 600px;
 		margin-top: 10px;
 		border-radius: 30px;
-		border-color: sienna;
 		align-self: center;
 		border: solid 3px;
 		border-style: black;
@@ -315,4 +314,32 @@ h1{
 	font-size:15px;
 	font-weight: bold;
 	font-family: 'Cutive Mono', monospace;
+}
+.aboutMe {
+	.aboutUs {
+		padding: 10px;
+		width: 600px;
+		height: 400px;
+		margin-top: 10px;
+		border-radius: 30px;
+		align-self: center;
+		border: solid 3px;
+		border-style: black;
+		border-color: black;
+		margin: 20px auto;
+		box-shadow: black 9px 10px 35px;
+	}
+	.aboutPerson {
+		padding: 10px;
+		width: 600px;
+		height: 100px;
+		margin-top: 10px;
+		border-radius: 30px;
+		align-self: center;
+		border: solid 3px;
+		border-style: black;
+		border-color: black;
+		margin: 20px auto;
+		box-shadow: black 9px 10px 35px;
+	}
 }
